# kronic

./: .clang-format  .clang-format-ignore  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  config.json
.github/workflows/: build.yaml  format.yaml
assets/: konfig.yaml
assets/shaders/: shader.frag  shader.vert
engine/: CMakeLists.txt  app.cpp  app.h  common.h  engine.cpp
engine/app/: CMakeLists.txt  app.cpp  app.h  konfig.cpp  konfig.h  window.h  window_none.h
engine/backends/: CMakeLists.txt  window_glfw.cpp  window_glfw.h  window_none.h
engine/backends/vulkan/: CMakeLists.txt  vulkan_common.h  vulkan_renderer.cpp  vulkan_renderer.h
engine/core/: CMakeLists.txt  event.h  event_link.h  log.cpp  log.h  math.h  renderer.h
engine/core/log/: CMakeLists.txt  log.h
engine/core/math/: CMakeLists.txt  math.h
engine/core/renderer/: CMakeLists.txt  renderer.h
engine/os/: CMakeLists.txt  file_system.cpp  file_system.h  os.h
engine/platform/: CMakeLists.txt  window_glfw.cpp  window_glfw.h  window_none.cpp  window_none.h
engine/platform/glfw/: CMakeLists.txt  glfw_window.cpp  glfw_window.h
engine/platform/linux/: CMakeLists.txt  os.cpp
engine/platform/vulkan/: CMakeLists.txt  vulkan_init_helpers.cpp  vulkan_init_helpers.h  vulkan_renderer.cpp  vulkan_renderer.h
engine/platform/windows/: CMakeLists.txt  os.cpp
engine/shaders/: shader.vert
kronic/: CMakeLists.txt  kronic_app.cpp  kronic_app.h  main.cpp
kronic/platform/: CMakeLists.txt  glfw_window.h  window_glfw.cpp  window_glfw.h
tests/: CMakeLists.txt  main.cpp  test.cpp  test.maths.h  test_headless.h  test_utils.h
